syntax = "proto3";

package callback;

import "internal/app/subsystems/api/grpc/api/promise.proto";

option go_package = "github.com/resonatehq/resonate/internal/app/subsystems/api/grpc/api";

service Callbacks {
    rpc CreateCallback (CreateCallbackRequest) returns (CreateCallbackResponse) {}
}

message Callback {
    string id = 1;
    string promiseId = 2;
    int64 timeout = 3;
    int64 createdOn = 4;
}

message CreateCallbackRequest {
    string promiseId = 1;
    int64 timeout = 2;
    Recv recv = 3;
    bytes message = 4;
    string requestId = 5;
}

message Recv {
  string type = 1;
  bytes data = 2;
}

message CreateCallbackResponse {
    bool noop = 1;
    Callback callback = 2;
    promise.Promise promise = 3;
}
